feat: added stm32 dds draft code.

--- a/2023h_g431.ioc
+++ b/2023h_g431.ioc
@@ -86,10 +86,11 @@ Mcu.CPN=STM32G431CBU6
 Mcu.Family=STM32G4
 Mcu.IP0=ADC1
 Mcu.IP1=COMP1
-Mcu.IP10=TIM3
-Mcu.IP11=TIM7
-Mcu.IP12=TIM15
-Mcu.IP13=USART1
+Mcu.IP10=SYS
+Mcu.IP11=TIM3
+Mcu.IP12=TIM7
+Mcu.IP13=TIM15
+Mcu.IP14=USART1
 Mcu.IP2=CORDIC
 Mcu.IP3=DAC3
 Mcu.IP4=DMA
@@ -97,8 +98,8 @@ Mcu.IP5=NVIC
 Mcu.IP6=OPAMP1
 Mcu.IP7=OPAMP3
 Mcu.IP8=RCC
-Mcu.IP9=SYS
-Mcu.IPNb=14
+Mcu.IP9=SPI1
+Mcu.IPNb=15
 Mcu.Name=STM32G431C(6-8-B)Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PC14-OSC32_IN
@@ -107,17 +108,21 @@ Mcu.Pin10=PA9
 Mcu.Pin11=PA10
 Mcu.Pin12=PA13
 Mcu.Pin13=PA14
-Mcu.Pin14=VP_COMP1_VS_VREFINT
-Mcu.Pin15=VP_CORDIC_VS_CORDIC
-Mcu.Pin16=VP_DAC3_VS_DACI1
-Mcu.Pin17=VP_DAC3_VS_DACI2
-Mcu.Pin18=VP_SYS_VS_Systick
-Mcu.Pin19=VP_SYS_VS_DBSignals
+Mcu.Pin14=PC11
+Mcu.Pin15=PB3
+Mcu.Pin16=PB4
+Mcu.Pin17=PB5
+Mcu.Pin18=VP_COMP1_VS_VREFINT14
+Mcu.Pin19=VP_CORDIC_VS_CORDIC
 Mcu.Pin2=PF0-OSC_IN
-Mcu.Pin20=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin21=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin22=VP_TIM15_VS_ClockSourceINT
-Mcu.Pin23=VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
+Mcu.Pin20=VP_DAC3_VS_DACI1
+Mcu.Pin21=VP_DAC3_VS_DACI2
+Mcu.Pin22=VP_SYS_VS_Systick
+Mcu.Pin23=VP_SYS_VS_DBSignals
+Mcu.Pin24=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin25=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin26=VP_TIM15_VS_ClockSourceINT
+Mcu.Pin27=VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
 Mcu.Pin3=PF1-OSC_OUT
 Mcu.Pin4=PA0
 Mcu.Pin5=PA1
@@ -125,7 +130,7 @@ Mcu.Pin6=PA2
 Mcu.Pin7=PA6
 Mcu.Pin8=PB1
 Mcu.Pin9=PC6
-Mcu.PinsNb=24
+Mcu.PinsNb=28
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -171,6 +176,21 @@ PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB1.Mode=Follower-DAC_OUT2-INP
 PB1.Signal=OPAMP3_VOUT
+PB3.Locked=true
+PB3.Mode=Simplex_Bidirectional_Master
+PB3.Signal=SPI1_SCK
+PB4.GPIOParameters=GPIO_Speed,GPIO_Label
+PB4.GPIO_Label=AD9834_FSYNCC
+PB4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PB4.Locked=true
+PB4.Signal=GPIO_Output
+PB5.Locked=true
+PB5.Mode=Simplex_Bidirectional_Master
+PB5.Signal=SPI1_MOSI
+PC11.GPIOParameters=GPIO_Label
+PC11.GPIO_Label=AD9834_RST
+PC11.Locked=true
+PC11.Signal=GPIO_Output
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
@@ -214,7 +234,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_DAC3_Init-DAC3-false-HAL-true,5-MX_OPAMP1_Init-OPAMP1-false-HAL-true,6-MX_OPAMP3_Init-OPAMP3-false-HAL-true,7-MX_TIM15_Init-TIM15-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true,9-MX_USART1_UART_Init-USART1-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_CORDIC_Init-CORDIC-false-HAL-true,12-MX_TIM7_Init-TIM7-false-HAL-true,13-MX_COMP1_Init-COMP1-false-HAL-true,14-MX_TIM6_Init-TIM6-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_DAC3_Init-DAC3-false-HAL-true,5-MX_OPAMP1_Init-OPAMP1-false-HAL-true,6-MX_OPAMP3_Init-OPAMP3-false-HAL-true,7-MX_TIM15_Init-TIM15-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true,9-MX_USART1_UART_Init-USART1-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_CORDIC_Init-CORDIC-false-HAL-true,12-MX_TIM7_Init-TIM7-false-HAL-true,13-MX_COMP1_Init-COMP1-false-HAL-true
 RCC.ADC12CLockSelection=RCC_ADC12CLKSOURCE_PLL
 RCC.ADC12Freq_Value=160000000
 RCC.AHBFreq_Value=160000000
@@ -259,29 +279,35 @@ RCC.USART3Freq_Value=160000000
 RCC.USBFreq_Value=160000000
 RCC.VCOInputFreq_Value=8000000
 RCC.VCOOutputFreq_Value=320000000
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
+SPI1.CalculateBaudRate=20.0 MBits/s
+SPI1.Direction=SPI_DIRECTION_1LINE
+SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualType=VM_MASTER
 STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.DSPOoLibraryJjLibrary_Checked=true
 STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.IPParameters=LibraryCcDSPOoLibraryJjDSPOoLibrary
 STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.LibraryCcDSPOoLibraryJjDSPOoLibrary=true
 STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0_SwParameter=LibraryCcDSPOoLibraryJjDSPOoLibrary\:true;
-TIM15.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM15.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM15.IPParameters=AutoReloadPreload,TIM_MasterOutputTrigger,Prescaler,PeriodNoDither
-TIM15.PeriodNoDither=31
-TIM15.Prescaler=0
+TIM15.PeriodNoDither=20-1
+TIM15.Prescaler=2-1
 TIM15.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM3.IPParameters=PeriodNoDither,AutoReloadPreload,TIM_MasterOutputTrigger,Prescaler
 TIM3.PeriodNoDither=19
 TIM3.Prescaler=1
 TIM3.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
-TIM7.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM7.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM7.IPParameters=TIM_MasterOutputTrigger,AutoReloadPreload,Prescaler,PeriodNoDither
-TIM7.PeriodNoDither=31
-TIM7.Prescaler=0
+TIM7.PeriodNoDither=20-1
+TIM7.Prescaler=2-1
 TIM7.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
-VP_COMP1_VS_VREFINT.Mode=VREFINT
-VP_COMP1_VS_VREFINT.Signal=COMP1_VS_VREFINT
+VP_COMP1_VS_VREFINT14.Mode=VREFINT_14
+VP_COMP1_VS_VREFINT14.Signal=COMP1_VS_VREFINT14
 VP_CORDIC_VS_CORDIC.Mode=CORDIC_Activate
 VP_CORDIC_VS_CORDIC.Signal=CORDIC_VS_CORDIC
 VP_DAC3_VS_DACI1.Mode=DAC_OUT1_Int
