feat: added ad9834 driver code.

--- a/2023h_g431.ioc
+++ b/2023h_g431.ioc
@@ -180,7 +180,7 @@ PB3.Locked=true
 PB3.Mode=Simplex_Bidirectional_Master
 PB3.Signal=SPI1_SCK
 PB4.GPIOParameters=GPIO_Speed,GPIO_Label
-PB4.GPIO_Label=AD9834_FSYNCC
+PB4.GPIO_Label=AD9834_FSYNC
 PB4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB4.Locked=true
 PB4.Signal=GPIO_Output
@@ -234,7 +234,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_DAC3_Init-DAC3-false-HAL-true,5-MX_OPAMP1_Init-OPAMP1-false-HAL-true,6-MX_OPAMP3_Init-OPAMP3-false-HAL-true,7-MX_TIM15_Init-TIM15-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true,9-MX_USART1_UART_Init-USART1-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_CORDIC_Init-CORDIC-false-HAL-true,12-MX_TIM7_Init-TIM7-false-HAL-true,13-MX_COMP1_Init-COMP1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_DAC3_Init-DAC3-false-HAL-true,5-MX_OPAMP1_Init-OPAMP1-false-HAL-true,6-MX_OPAMP3_Init-OPAMP3-false-HAL-true,7-MX_TIM15_Init-TIM15-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true,9-MX_USART1_UART_Init-USART1-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_CORDIC_Init-CORDIC-false-HAL-true,12-MX_TIM7_Init-TIM7-false-HAL-true,13-MX_COMP1_Init-COMP1-false-HAL-true,14-MX_SPI1_Init-SPI1-false-HAL-true
 RCC.ADC12CLockSelection=RCC_ADC12CLKSOURCE_PLL
 RCC.ADC12Freq_Value=160000000
 RCC.AHBFreq_Value=160000000
@@ -281,8 +281,9 @@ RCC.VCOInputFreq_Value=8000000
 RCC.VCOOutputFreq_Value=320000000
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
 SPI1.CalculateBaudRate=20.0 MBits/s
+SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_1LINE
-SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate
+SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,DataSize
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.DSPOoLibraryJjLibrary_Checked=true
