--- a/2023h_g431.ioc
+++ b/2023h_g431.ioc
@@ -279,11 +279,12 @@ RCC.USART3Freq_Value=160000000
 RCC.USBFreq_Value=160000000
 RCC.VCOInputFreq_Value=8000000
 RCC.VCOOutputFreq_Value=320000000
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
-SPI1.CalculateBaudRate=20.0 MBits/s
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
+SPI1.CLKPolarity=SPI_POLARITY_HIGH
+SPI1.CalculateBaudRate=1.25 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_1LINE
-SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,DataSize
+SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,DataSize,CLKPolarity
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.DSPOoLibraryJjLibrary_Checked=true
