--- a/2023h_g431.ioc
+++ b/2023h_g431.ioc
@@ -88,9 +88,10 @@ Mcu.IP0=ADC1
 Mcu.IP1=COMP1
 Mcu.IP10=SYS
 Mcu.IP11=TIM3
-Mcu.IP12=TIM7
-Mcu.IP13=TIM15
-Mcu.IP14=USART1
+Mcu.IP12=TIM4
+Mcu.IP13=TIM7
+Mcu.IP14=TIM15
+Mcu.IP15=USART1
 Mcu.IP2=CORDIC
 Mcu.IP3=DAC3
 Mcu.IP4=DMA
@@ -99,7 +100,7 @@ Mcu.IP6=OPAMP1
 Mcu.IP7=OPAMP3
 Mcu.IP8=RCC
 Mcu.IP9=SPI1
-Mcu.IPNb=15
+Mcu.IPNb=16
 Mcu.Name=STM32G431C(6-8-B)Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PC14-OSC32_IN
@@ -120,17 +121,20 @@ Mcu.Pin21=VP_DAC3_VS_DACI2
 Mcu.Pin22=VP_SYS_VS_Systick
 Mcu.Pin23=VP_SYS_VS_DBSignals
 Mcu.Pin24=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin25=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin26=VP_TIM15_VS_ClockSourceINT
-Mcu.Pin27=VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
+Mcu.Pin25=VP_TIM4_VS_ControllerModeTrigger
+Mcu.Pin26=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin27=VP_TIM4_VS_NoETR
+Mcu.Pin28=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin29=VP_TIM15_VS_ClockSourceINT
 Mcu.Pin3=PF1-OSC_OUT
+Mcu.Pin30=VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
 Mcu.Pin4=PA0
 Mcu.Pin5=PA1
 Mcu.Pin6=PA2
 Mcu.Pin7=PA6
 Mcu.Pin8=PB1
 Mcu.Pin9=PC6
-Mcu.PinsNb=28
+Mcu.PinsNb=31
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -151,6 +155,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 OPAMP1.IPParameters=PowerMode
@@ -301,6 +306,8 @@ TIM3.IPParameters=PeriodNoDither,AutoReloadPreload,TIM_MasterOutputTrigger,Presc
 TIM3.PeriodNoDither=19
 TIM3.Prescaler=1
 TIM3.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM4.IPParameters=Prescaler
+TIM4.Prescaler=159
 TIM7.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM7.IPParameters=TIM_MasterOutputTrigger,AutoReloadPreload,Prescaler,PeriodNoDither
 TIM7.PeriodNoDither=20-1
@@ -326,6 +333,12 @@ VP_TIM15_VS_ClockSourceINT.Mode=Internal
 VP_TIM15_VS_ClockSourceINT.Signal=TIM15_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
+VP_TIM4_VS_ControllerModeTrigger.Mode=Trigger Mode
+VP_TIM4_VS_ControllerModeTrigger.Signal=TIM4_VS_ControllerModeTrigger
+VP_TIM4_VS_NoETR.Mode=TriggerSource_ETR_Remap_TIM4
+VP_TIM4_VS_NoETR.Signal=TIM4_VS_NoETR
 VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 board=custom
